[gd_scene load_steps=3 format=3 uid="uid://c456fpuxfuvvc"]

[ext_resource type="Script" path="res://Game.gd" id="1_fxbok"]
[ext_resource type="PackedScene" uid="uid://cnl032c7mal2m" path="res://puzzle.tscn" id="2_owhmh"]

[node name="Game" type="Node2D"]
script = ExtResource("1_fxbok")

[node name="Puzzles" type="Node2D" parent="."]

[node name="Puzzle" parent="Puzzles" instance=ExtResource("2_owhmh")]

[node name="Puzzle2" parent="Puzzles" instance=ExtResource("2_owhmh")]
position = Vector2(256, 2.08165e-12)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 448.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MovesLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Moves: 0"

[node name="RelicsLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Relics: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Left" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Left"

[node name="Forward" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Forward"

[node name="Right" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Right"

[connection signal="pressed" from="Control/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Forward" to="." method="_on_forward_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Right" to="." method="_on_right_pressed"]
